AM_CPPFLAGS = -I$(top_srcdir)/lib/portage $(AUTOGENTOO_CFLAGS)
bin_PROGRAMS = agemerge
agemerge_SOURCES = bash_config.cpp emergepackage.cpp is_dir.cpp type.cpp blocks.cpp file.cpp _misc_tools.cpp use.cpp config.cpp findPackage.cpp option.cpp version.cpp ebuild.cpp packageConfig.cpp warning.cpp emerge-bin.cpp flags.cpp package.cpp emerge.cpp parse_config.cpp
