portagedir=$(pkgincludedir)/portage
portage_HEADERS =   directory.h \
                    repository.h \
                    hash.h \
                    package.h \
                    manifest.h \
                    dependency.h \
                    portage.h \
                    package_config.h \
                    use_flags.h