toolsincludedir = $(pkgincludedir)/core/tools
toolsinclude_HEADERS =                     \
                         command_tools.h   \
                         encrypt.h         \
                         file.h            \
                         mstring.h         \
                         dictionary.h      \
                         fgetln.h          \
                         iniparser.h       \
                         ptr_handler.h
