AM_CPPFLAGS = -I$(top_srcdir)/lib/core/tools $(AUTOGENTOO_CFLAGS)
AM_CFLAGS = $(AUTOGENTOO_CFLAGS)
ACLOCAL_AMFLAGS='-I m4'
lib_LTLIBRARIES = libagcoretools.la
libagcoretools_la_SOURCES = mstring.c encrypt.c iniparser.c dictionary.c command_tools.c file.c ptr_handler.c fgetln.c
libagcoretools_la_LDFLAGS = -version-info 0:0:0
